# striide-web

./: docker-compose.yml  filebeat.yml  firewall  frontend-deployment.yaml  frontend-deployment.yml  frontend-service.yaml  frontend-service.yml  logging.pem  logserver.pem  logstash.conf  package-lock.json  playbook.yml  setup_elk.yml  striide-frontend.pem  striide_frontend.pem  striidefrontend.pem
.github/: CDfrontend.yml
.github/workflows/: CD.yml  CI.yml  CICD.yml  main.yml  test_backend.yml
docker_cleanup/tasks/: main.yml
elk/logstash/: logstash.conf
pathfinding_dev/: .gitignore  Cargo.toml
pathfinding_dev/src/: .env  main.rs
roles/setup_docker_compose/tasks/: main.yml
striide-backend/: .env  .gitignore  Dockerfile
striide-backend/api/: .env
striide-backend/api/src/: auth.rs  business.rs  pathfinder.rs  user_reports.rs
striide-backend/api/tests/: integration_tests.rs
striide-backend/infrastructure/src/: cors.rs
striide-backend/src/: .env
striide-frontend/: .env  middleware.ts  package-lock.json  package.json
striide-frontend/src/: auth.ts  logger.js
striide-frontend/src/app/: page.tsx
striide-frontend/src/app/check-email/: page.tsx
striide-frontend/src/app/drafts/: page.tsx
striide-frontend/src/app/feedback/: page.tsx
striide-frontend/src/components/: Map.tsx
striide-frontend/src/contexts/: AuthProvider.tsx  MapProvider.tsx
striide-frontend/src/lib/: check-auth.ts
striide-log-server/: .env  Dockerfile  index.js  package-lock.json  package.json
striide-log-server/tests/: logServer.test.js
(+21 files in other folders)
