[package]
name = "pathfinding_dev_bin"
version = "0.1.0"
edition = "2021"

[dependencies]
geo = "0.28.0"
dotenv = "0.15.0"
geojson = "0.24.1"
petgraph = "0.6.5"
serde_json = "1.0.118"
indicatif = "0.17.8"
rstar = "0.12.0"
rayon = "1.10.0"
num_cpus = "1.0"
rand = { version = "0.8.5", features = ["std"] }
bson = "2.11.0"
flate2 = "1.0.32"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tokio]
version = "1.0.0"
features = ["full"]

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.sqlx]
version = "0.7.0"
features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"]